# smartghar-smart-switch

./: .gitignore  CHANGELOG.md  LICENSE  README.md
docs/: matter-image-design.md  softap-config-portal.md  transports-roadmap.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware-matter/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware-matter/main/: app_driver.cpp  app_main.cpp  app_priv.h
firmware/main/: CMakeLists.txt  config.h  main.c  softap_portal.c  softap_portal.h  version_gen.h
